force-app/main/default/objects/Mail__c/fields/Addressee__c.field-meta.xml
<CustomField>
    <fullName>Addressee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Addressee</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Incoming Mail</relationshipLabel>
    <relationshipName>Incoming</relationshipName>
    <type>Lookup</type>
</CustomField>