force-app/main/default/objects/Mail__c/fields/Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Status__c</fullName>
    <label>Delivery Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Info Received</fullName>
            </value>
            <value>
                <fullName>In Transit</fullName>
            </value>
            <value>
                <fullName>Out for Delivery</fullName>
            </value>
            <value>
                <fullName>Failed Attempt</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Available for Pickup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>