force-app/main/default/objects/Mail__c/fields/Depth__c.field-meta.xml
<CustomField>
    <fullName>Depth__c</fullName>
    <defaultValue>0.3</defaultValue>
    <description>in cm</description>
    <label>Depth</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>