force-app/main/default/objects/Mail__c/fields/Fragile__c.field-meta.xml
<CustomField>
    <fullName>Fragile__c</fullName>
    <label>Fragile</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Fragile</fullName>
                <default>true</default>
                <label>Not Fragile</label>
            </value>
            <value>
                <fullName>Fragile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>