force-app/main/default/objects/Mail__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <formula>Inhabitant__r.Full_Name__r.FirstName &amp; &quot; &quot; &amp;  Inhabitant__r.Full_Name__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>