force-app/main/default/objects/Mail__c/fields/Package_Value__c.field-meta.xml
<CustomField>
    <fullName>Package_Value__c</fullName>
    <description>Put how much the package is worth here.</description>
    <label>Package Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>