force-app/main/default/objects/Mail__c/fields/Send_to_Location__c.field-meta.xml
<CustomField>
    <fullName>Send_to_Location__c</fullName>
    <formula>Inhabitant__r.Mailing_Address__r.Mailing_Address__c</formula>
    <label>Send to Location</label>
    <type>Text</type>
</CustomField>