force-app/main/default/objects/Mail__c/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sender</label>
    <referenceTo>Inhabitant__c</referenceTo>
    <relationshipLabel>Outgoing Mail</relationshipLabel>
    <relationshipName>Outgoing</relationshipName>
    <type>Lookup</type>
</CustomField>