force-app/main/default/objects/Mail__c/fields/Weight_Ibs__c.field-meta.xml
<CustomField>
    <fullName>Weight_Ibs__c</fullName>
    <label>Weight Ibs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>