force-app/main/default/objects/Mail__c/recordTypes/Letter_Mail.recordType-meta.xml
<RecordType>
    <fullName>Letter_Mail</fullName>
    <active>true</active>
    <description>This record type is for Letter Mails only</description>
    <label>Letter Mail</label>
</RecordType>