force-app/main/default/objects/Mail__c/recordTypes/Package_Mail.recordType-meta.xml
<RecordType>
    <fullName>Package_Mail</fullName>
    <active>true</active>
    <description>This record type is for Package Mails only</description>
    <label>Package Mail</label>
</RecordType>