force-app/main/default/objects/Mail__c/validationRules/Cant_change_fragile.validationRule-meta.xml
<ValidationRule>
    <fullName>Cant_change_fragile</fullName>
    <active>true</active>
    <errorConditionFormula>ISCHANGED( Fragile__c )</errorConditionFormula>
    <errorDisplayField>Fragile__c</errorDisplayField>
    <errorMessage>Cannot change the fragility.</errorMessage>
</ValidationRule>