force-app/main/default/objects/Mail__c/validationRules/Mail_must_have_a_route.validationRule-meta.xml
<ValidationRule>
    <fullName>Mail_must_have_a_route</fullName>
    <active>true</active>
    <description>Mail must have a route. Set this to Unsorted if unsure of the route.</description>
    <errorConditionFormula>ISBLANK(Route__c)</errorConditionFormula>
    <errorDisplayField>Route__c</errorDisplayField>
    <errorMessage>Mail must have a route. Set this to Unsorted if unsure of the route.</errorMessage>
</ValidationRule>