force-app/main/default/objects/Mail__c/listViews/Unsorted_Mail_Mail.listView-meta.xml
<ListView>
    <fullName>Unsorted_Mail_Mail</fullName>
    <filterScope>Queue</filterScope>
    <label>Unsorted Mail</label>
    <queue>Unsorted_Mail</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>